Add Solution Overview